[gender split vis] show fewer words on smaller devices. fixes #148

--- a/src/styles/gender-split.styl
+++ b/src/styles/gender-split.styl
@@ -37,6 +37,19 @@
     font-size: 28px;
   }
 
+  .female-section-label, .male-section-label {
+    font-family: $adjective-font;
+    font-weight: 200;
+    font-style: italic;
+    font-size: 28px;
+  }
+
+  @media (max-width: $max-mobile-width) {
+    .female-section-label, .male-section-label {
+      font-size: 20px;
+    }
+  }
+
   .adjective {
     cursor: pointer;
   }
